--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,10 @@
-{}
+{
+    "overrides": [
+      {
+        "files": "*.md",
+        "options": {
+          "tabWidth": 2
+        }
+      }
+    ]
+  }
