--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "url": "https://github.com/icaraps"
   },
   "dependencies": {
-    "@adobe/gatsby-theme-aio": "^3.1.3",
-    "gatsby": "^3.0.0"
+    "@adobe/gatsby-theme-aio": "^3.1.8",
+    "gatsby": "^3.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "scripts": {
     "start": "gatsby build && gatsby serve",
