--- a/.remarkrc
+++ b/.remarkrc
@@ -1,6 +1,6 @@
 {
   "plugins": [
     "remark-preset-lint-recommended",
-    ["remark-lint-list-item-indent", "mixed"]
+    ["remark-lint-list-item-indent", "space"]
   ]
 }
