--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "url": "https://github.com/AdobeDocs/dev-site-documentation-template"
   },
   "author": {
-    "name": "Stephan Ringel",
-    "url": "https://github.com/icaraps"
+    "name": "Bruce Denham",
+    "url": "https://github.com/bdenham"
+  },
+  "browser": {
+    "tty": "tty-browserify"
   },
   "dependencies": {
-    "@adobe/gatsby-theme-aio": "^3.20.3",
+    "@adobe/gatsby-theme-aio": "^3.21.0",
+    "colorette": "^2.0.16",
     "gatsby": "^3.6.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "tty-browserify": "0.0.1"
+    "tty-browserify": "^0.0.1"
   },
   "scripts": {
     "start": "gatsby build && gatsby serve",
@@ -36,6 +40,6 @@
     "prettier": "2.4.1",
     "remark-cli": "^10.0.0",
     "remark-lint-list-item-indent": "^3.1.0",
-    "remark-preset-lint-recommended": "^6.1.0"
+    "remark-preset-lint-recommended": "^6.1.1"
   }
 }
