--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "gatsby": "^3.6.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "tty-browserify": "^n0.0.1"
+    "tty-browserify": "^0.0.1"
   },
   "scripts": {
     "start": "gatsby build && gatsby serve",
