--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "url": "https://github.com/bdenham"
   },
   "dependencies": {
-    "@adobe/gatsby-theme-aio": "^3.24.2",
-    "gatsby": "^3.6.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "@adobe/gatsby-theme-aio": "4.5.9-rc2",
+    "gatsby": "4.22.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "tty-browserify": "^0.0.1"
   },
   "scripts": {
@@ -33,9 +33,10 @@
     "prettier:test": "prettier --check src"
   },
   "devDependencies": {
-    "prettier": "2.6.2",
-    "remark-cli": "^10.0.1",
+    "prettier": "2.7.1",
+    "remark-cli": "^11.0.0",
     "remark-lint-list-item-indent": "^3.1.1",
     "remark-preset-lint-recommended": "^6.1.2"
-  }
+  },
+  "packageManager": "yarn@3.2.3"
 }
