--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "url": "https://github.com/bdenham"
   },
   "dependencies": {
-    "@adobe/gatsby-theme-aio": "^3.24.2",
-    "gatsby": "^3.6.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "@adobe/gatsby-theme-aio": "^4.6.2",
+    "gatsby": "4.22.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "tty-browserify": "^0.0.1"
   },
   "scripts": {
