--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "author": "PWA Studio Team",
   "dependencies": {
-    "@devdocs/gatsby-theme-acd": "0.0.2",
+    "@adobe/gatsby-theme-aio": "4.6.2",
     "gatsby": "4.22.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
