--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   "author": "PWA Studio Team",
   "dependencies": {
     "@adobe/gatsby-theme-aio": "4.6.2",
+    "@emotion/react": "^11.10.4",
+    "@spectrum-css/link": "^3.1.23",
+    "@spectrum-css/typography": "^4.0.20",
+    "@spectrum-css/vars": "^8.0.0",
+    "@spectrum-css/well": "^3.0.22",
+    "classnames": "^2.3.2",
     "gatsby": "4.22.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tty-browserify": "^0.0.1"
@@ -28,6 +35,7 @@
     "test:links": "remark src/pages --quiet --frail"
   },
   "devDependencies": {
+    "@adobe/gatsby-theme-aio": "4.6.2",
     "prettier": "2.6.2",
     "remark-cli": "^10.0.1",
     "remark-validate-links": "^11.0.2"
