PWA-2915: Added Tailwind CSS configuration and theming documentation (#155)
Co-authored-by: Kevin Harper <keharper@users.noreply.github.com>
Co-authored-by: James Calcaben <jcalcaben@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "type": "git",
     "url": "https://github.com/AdobeDocs/commerce-pwa-studio"
   },
-  "author": {
-    "name": "Bruce Denham",
-    "url": "https://github.com/bdenham"
-  },
+  "author": "PWA Studio Team",
   "dependencies": {
     "@adobe/gatsby-theme-aio": "4.6.2",
     "gatsby": "4.22.0",
