--- a/package.json
+++ b/package.json
@@ -8,23 +8,28 @@
   },
   "author": "PWA Studio Team",
   "dependencies": {
-    "@adobe/gatsby-theme-aio": "4.6.2",
-    "@adobe/prism-adobe": "^1.0.3",
-    "@emotion/react": "^11.10.4",
-    "@spectrum-css/actionbutton": "^2.1.8",
-    "@spectrum-css/link": "^3.1.23",
-    "@spectrum-css/tooltip": "^3.1.18",
-    "@spectrum-css/typography": "^4.0.20",
-    "@spectrum-css/vars": "^8.0.0",
-    "@spectrum-css/well": "^3.0.22",
-    "classnames": "^2.3.2",
+    "@adobe/gatsby-theme-aio": "4.6.6",
+    "@adobe/prism-adobe": "1.0.3",
+    "@emotion/react": "11.10.5",
+    "@spectrum-css/actionbutton": "2.1.8",
+    "@spectrum-css/link": "3.1.23",
+    "@spectrum-css/tooltip": "3.1.18",
+    "@spectrum-css/typography": "4.0.20",
+    "@spectrum-css/vars": "8.0.0",
+    "@spectrum-css/well": "3.0.22",
+    "classnames": "2.3.2",
     "gatsby": "4.22.0",
-    "prism-react-renderer": "^1.3.5",
-    "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-id-generator": "^3.0.2",
-    "tty-browserify": "^0.0.1"
+    "gatsby-remark-mermaid": "^2.1.0",
+    "gatsby-transformer-remark": "5.22.0",
+    "mdast": "^3.0.0",
+    "prism-react-renderer": "1.3.5",
+    "prop-types": "15.8.1",
+    "puppeteer": "19.2.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-id-generator": "3.0.2",
+    "remark": "^14.0.2",
+    "tty-browserify": "0.0.1"
   },
   "scripts": {
     "start": "gatsby build && gatsby serve",
@@ -40,10 +45,10 @@
     "test:links": "remark src/pages --quiet --frail"
   },
   "devDependencies": {
-    "@adobe/gatsby-theme-aio": "4.6.2",
-    "prettier": "2.6.2",
-    "remark-cli": "^10.0.1",
-    "remark-validate-links": "^11.0.2"
+    "@adobe/gatsby-theme-aio": "4.6.6",
+    "prettier": "2.7.1",
+    "remark-cli": "^11.0.0",
+    "remark-validate-links": "^12.1.0"
   },
   "remarkConfig": {
     "plugins": [
