COMDOX-454: Prepare for required workflow

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "PWA Studio Team",
   "dependencies": {
-    "@adobe/gatsby-theme-aio": "4.6.6",
+    "@adobe/gatsby-theme-aio": "4.8.3",
     "gatsby": "4.22.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,7 +25,8 @@
     "clean": "gatsby clean",
     "prettier": "prettier --write",
     "prettier:test": "prettier --check src",
-    "test:links": "remark src/pages --quiet --frail"
+    "test:links": "remark src/pages --quiet --frail",
+    "lint": "docker run --rm -e RUN_LOCAL=true --env-file .github/super-linter.env -v \"$PWD\":/tmp/lint github/super-linter:slim-v4.10.1"
   },
   "devDependencies": {
     "prettier": "2.6.2",
