--- a/package.json
+++ b/package.json
@@ -31,12 +31,9 @@
   "devDependencies": {
     "prettier": "2.8.7",
     "remark-cli": "^11.0.0",
+    "remark-frontmatter": "4.0.1",
+    "remark-lint-frontmatter-schema": "^3.15.2",
     "remark-validate-links": "^12.1.0"
-  },
-  "remarkConfig": {
-    "plugins": [
-      "remark-validate-links"
-    ]
   },
   "packageManager": "yarn@3.2.4"
 }
