--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "clean": "gatsby clean",
     "prettier": "prettier --write",
     "prettier:test": "prettier --check src",
-    "test:links": "remark src/pages --quiet --frail",
+    "test": "remark src/pages --quiet --frail",
     "lint": "docker run --rm -e RUN_LOCAL=true --env-file .github/super-linter.env -v \"$PWD\":/tmp/lint github/super-linter:slim-v4.10.1"
   },
   "devDependencies": {
