--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "remark-cli": "^11.0.0",
     "remark-frontmatter": "4.0.1",
     "remark-lint-frontmatter-schema": "^3.15.2",
+    "remark-lint-no-dead-urls": "^1.1.0",
     "remark-validate-links": "^12.1.0"
   },
   "packageManager": "yarn@3.2.4"
