--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prettier": "2.8.7",
     "remark-cli": "^11.0.0",
     "remark-frontmatter": "4.0.1",
+    "remark-heading-id": "^1.0.1",
     "remark-lint-frontmatter-schema": "^3.15.2",
     "remark-lint-no-dead-urls": "^1.1.0",
     "remark-validate-links": "^12.1.0"
