--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "clean": "gatsby clean",
     "prettier": "prettier --write",
     "prettier:test": "prettier --check src",
-    "test": "remark src/pages --quiet --frail",
-    "lint": "docker run --rm -e RUN_LOCAL=true --env-file .github/super-linter.env -v \"$PWD\":/tmp/lint github/super-linter:slim-v5"
+    "test": "remark src/pages --quiet --frail"
   },
   "devDependencies": {
     "prettier": "2.8.7",
