--- a/package.json
+++ b/package.json
@@ -8,21 +8,24 @@
   },
   "author": "PWA Studio Team",
   "scripts": {
-    "dev": "node ./dev.mjs",
     "buildNavigation": "npx --yes github:AdobeDocs/adp-devsite-utils#devsite-1982-buildNav buildNavigation -v",
     "buildRedirections": "npx --yes github:AdobeDocs/adp-devsite-utils buildRedirections -v",
-    "renameFiles": "npx --yes github:AdobeDocs/adp-devsite-utils renameFiles -v",
-    "normalizeLinks": "npx --yes github:AdobeDocs/adp-devsite-utils normalizeLinks -v",
     "buildSiteWideBanner": "npx --yes github:AdobeDocs/adp-devsite-utils buildSiteWideBanner -v",
+    "dev": "node ./dev.mjs",
+    "link:deadlinkonly": "npx --yes github:AdobeDocs/adp-devsite-utils runLint --dead-links-only -v",
+    "link:skipdeadlinks": "npx --yes github:AdobeDocs/adp-devsite-utils runLint --skip-dead-links -v",
     "lint": "npx --yes github:AdobeDocs/adp-devsite-utils runLint -v",
     "lint:errorOnly": "npx --yes github:AdobeDocs/adp-devsite-utils runLint",
-    "link:skipdeadlinks": "npx --yes github:AdobeDocs/adp-devsite-utils runLint --skip-dead-links -v",
-    "link:deadlinkonly": "npx --yes github:AdobeDocs/adp-devsite-utils runLint --dead-links-only -v",
+    "lint:md": "npx --yes markdownlint-cli2 'src/pages/**/*.md' '*.md' --ignore '**/config.md'",
+    "lint:md:fix": "npx --yes markdownlint-cli2 --fix 'src/pages/**/*.md' '*.md' --ignore '**/config.md'",
+    "normalizeLinks": "npx --yes github:AdobeDocs/adp-devsite-utils normalizeLinks -v",
+    "redirectCheck:prod": "npx --yes github:AdobeDocs/adp-devsite-utils redirectChecker prod --verbose",
     "redirectCheck:stage": "npx --yes github:AdobeDocs/adp-devsite-utils redirectChecker stage --verbose",
-    "redirectCheck:prod": "npx --yes github:AdobeDocs/adp-devsite-utils redirectChecker prod --verbose"
+    "renameFiles": "npx --yes github:AdobeDocs/adp-devsite-utils renameFiles -v",
+    "test": "npx --yes jest",
+    "test:config": "npx --yes jest tests/config.test.js"
   },
   "devDependencies": {
-    "express": "5.1.0"
-  },
-  "packageManager": "yarn@3.2.4"
+    "express": "5.2.1"
+  }
 }
